<resources>
    <string name="app_name">E-Commerce</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string name="Product_Description">Product Description</string>
    <string name="edit_product_category">Edit Product Category</string>
    <string name="click_here_to_edit_product_image">Click Here to edit product image</string>
    <string name="edit_product_title">Edit Product Title</string>
    <string name="edit_product_description">Edit Product Description</string>
    <string name="edit_product_price">Edit Product Price</string>
    <string name="update_product">Update Product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_email">Dummy Email</string>
    <string name="dummy_name">Dummy Name</string>
    <string name="_91_123456789">+91 123456789</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="_610_846_keshav_nagar_fazullaganj_lucknow_uttar_pradesh_226020">610/846, Keshav Nagar, Fazullaganj, Lucknow, Uttar Pradesh 226020</string>
</resources>