<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ViewFlipper
        android:id="@id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="0dp"
        android:flipInterval="2300"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <ImageView
            android:id="@+id/productImage1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_ballot_24" />

        <ImageView
            android:id="@+id/productImage2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_ballot_24" />

        <ImageView
            android:id="@+id/productImage3"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_ballot_24" />

    </ViewFlipper>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_alignStart="@+id/viewFlipper"
       android:layout_height="?actionBarSize"
       android:gravity="center_vertical">
       <ImageView
           android:id="@+id/back"
           android:background="@drawable/cirecular_background"
           android:layout_width="30sp"
           android:backgroundTint="@color/black"
           android:layout_height="30sp"
           android:padding="5sp"
           android:layout_alignParentStart="true"
           android:layout_alignParentTop="true"
           android:layout_marginStart="10dp"
           app:tint="@color/white"
           android:src="@drawable/back" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="30sp"
           android:visibility="gone"
           android:layout_alignParentTop="true"
           android:layout_toStartOf="@+id/more"
           android:layout_toEndOf="@+id/back"
           android:gravity="center_vertical"
           android:textStyle="bold"
           android:paddingLeft="10dp"
           android:paddingRight="10dp"
           android:text="@string/Product_Description"
           android:textColor="@color/black"
           android:textSize="14sp" />

       <ImageView
           android:id="@+id/more"
           android:layout_alignParentEnd="true"
           android:layout_marginEnd="10dp"
           android:layout_width="30sp"
           android:backgroundTint="@color/black"
           android:layout_height="30sp"
           android:src="@drawable/more"
           app:tint="@color/black" />
   </RelativeLayout>


    <RelativeLayout
        android:id="@+id/productData"
        android:layout_width="match_parent"
        android:elevation="20dp"
        android:outlineSpotShadowColor="@color/black"
        android:outlineAmbientShadowColor="@color/black"
        android:layout_height="match_parent"
        android:layout_below="@id/viewFlipper"
        android:layout_marginTop="-47dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/corner_radius_layout">

        <LinearLayout
            android:layout_marginTop="30dp"
            android:id="@+id/categoryAndRatingBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:textColor="@color/black"
                android:id="@+id/productCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="3"
                android:text="Category"
                android:textSize="15sp" />

            <RatingBar
                android:id="@+id/productRating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="30dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/titleAndRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categoryAndRatingBar"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/productTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/productCategory"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="4"
                android:text="Product Title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/productRateCount"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/productRating"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="Rated by 100" />


        </LinearLayout>

        <TextView
            android:id="@+id/productPrice"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionAndCount"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="100 INR"
            android:textSize="20sp"
            android:textStyle="bold" />



        <LinearLayout
            android:id="@+id/descriptionAndCount"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleAndRating"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/productDescription"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="4"
                android:text="@string/Product_Description"
                android:scrollHorizontally="true"
                android:textSize="18sp"
                android:typeface="monospace" />
        </LinearLayout>


<!--        <LinearLayout-->
<!--            android:id="@+id/addRemoveProduct"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="20dp"-->
<!--            android:layout_below="@+id/descriptionAndCount"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:orientation="horizontal"-->
<!--            android:weightSum="4">-->

<!--            <ImageView-->
<!--                android:id="@+id/removeFromCart"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_weight="1"-->
<!--                android:src="@drawable/minus" />-->

<!--            <TextView-->
<!--                android:id="@+id/numberOfProductAdded"-->
<!--                android:gravity="center"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="2"-->
<!--                android:text="    1    "-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="20sp"-->
<!--                android:textStyle="bold" />-->

<!--            <ImageView-->
<!--                android:id="@+id/addToCart"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="25dp"-->
<!--                android:layout_weight="1"-->
<!--                android:src="@drawable/baseline_add_24" />-->

<!--        </LinearLayout>-->


    </RelativeLayout>

    <RelativeLayout
        android:elevation="20dp"
        android:outlineSpotShadowColor="@color/black"
        android:id="@+id/addAndRemoveProduct1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:paddingStart="350dp">
        <LinearLayout
            android:background="@drawable/corner_rect_layout"
            android:backgroundTint="@color/black"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/slide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/productData"
                android:layout_marginLeft="15sp"
                android:layout_gravity="center_vertical"
                android:tint="@color/white"
                android:src="@drawable/baseline_arrow_back_ios_24"
                tools:ignore="UseAppTint" />

            <LinearLayout
                android:id="@+id/addRemoveProduct"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_below="@+id/descriptionAndCount"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:visibility="gone"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/removeFromCart"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/minus" />

                <TextView
                    android:id="@+id/numberOfProductAdded"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="1"
                    android:textColor="@color/Cream"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/addToCart"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_add_24" />

            </LinearLayout>

            <Button
                android:id="@+id/deleteData"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/productData"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/Delete"
                android:visibility="gone"

                android:textSize="12sp"
                />

            <Button
                android:layout_weight="1"
                android:id="@+id/updateData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deleteData"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/Update"
                android:textSize="12sp"
                android:visibility="gone"

                />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>